@@ -2,6 +2,8 @@ $Rev$
 [2008/03/02]
 EditorFactory.py FlatNotebook.py
                     Fix tab invisible bug after changing size or changing the page title
+mLineending.py      Add strip line ending when saving functionality and strip line ending menu item
+                    in Edit/Format.
                     
 [2008/03/01]
 mLineending.py      Fix copy and paste lineending is not correct bug
